# SHIP

./: .gitignore  Pangenome-Graph-tmp.html  README.md  amrfinder_requirements.txt  annotate.py  build_networks.py  bulk_find_conserved_regions.py  cluster_analysis.py  cluster_plasmids.py  conserved_region_stats.py  find_amr.py  find_conserved_regions.py  homolog_clustering.py  ismb_pipeline.sh  ismb_pipeline_clustering.sh  ismb_pipeline_networks.sh  length_thresholds.py  make_amrfinder_df.py  make_mobsuite_df.py  make_plasmid_info_df.py  mobsuite_requirements.txt  motif_analysis.py  pangenome_analysis.py  pipeline.py  pipeline_clustering.sh  pipeline_mobsuite.sh  pipeline_networks.sh  plot_networks.py  prepare_mobsuite_input.py  prokka_requirements.txt  pyproject.toml  replace_with_homologs.py  requirements.txt  setup.py  ship.py  test_ship.sh
SHIP/: __init__.py  plot_networks.py  ship.py
SHIP/annotations/: fasta_handler.py
SHIP/utils/: clustering.py  genome.py  interpretation.py  jaccard.py
annotations/: databases.py  prokka.py
conda/: meta.yaml
conda-out/: channeldata.json  index.html
conda-out/linux-64/: current_repodata.json  (+3 more)
configs/: clustering_config.yaml  data_config.yaml  phylo_config.yaml
data/: plasmid_info.tsv
ship_plasmid/: __init__.py  conserved_region_stats.py  meta.yaml  pangenome_analysis.py  plot_networks.py  ship.py  test_ship.sh
test/: test_plasmid_1.fa  test_plasmid_2.fa  test_plasmid_3.fa  test_ship.sh
utils/: amrfinder.py  cdhit.py  core_genes.py  files.py  genome.py  markov_cluster.py  motifs.py  phylogeny.py  proteins.py
(+1410 files in other folders)
