[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ship-plasmid"
authors = [{name = "Marco Teixeira", email = "mcarvalh@broadinstitute.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "biopython == 1.79",
    "graphviz == 2.42.3",
    "joblib == 1.2.0",
    "markov-clustering == 0.0.6",
    "matplotlib == 3.6.1",
    "networkx == 2.8.6",
    "numpy == 1.23.3",
    "pandas == 1.4.4",
    "pymc == 4.2.2",
    "pyvis == 0.2.1",
    "pyyaml == 6.0",
    "scikit-learn == 1.1.2",
    "scipy == 1.9.1",
    "tqdm == 4.64.1"
]

[project.urls]
Home = "https://github.com/AbeelLab/plasmidHGT"
Source = "https://github.com/AbeelLab/plasmidHGT"

[project.scripts]
ship = "ship:main"